--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "source.fixAll.eslint": "explicit"
   },
   "editor.tabSize": 2,
-  "workbench.editor.labelFormat": "short"
+  "workbench.editor.labelFormat": "short",
+  "workbench.tree.indent": 20,
 }
